@@ -58,3 +58,11 @@ $display(`msg(left side, right side))
 `ifndef EMPTY_TRUE
   `error "Empty is still true"
 `endif
+
+// Quotes are legal in protected blocks.  Grr.
+module prot();
+`protected
+    I!#r#e6<_Q{{E2+]I3<[3s)1@D|'E''i!O?]jD>Jo_![Cl)
+    #nj1]p,3^1~,="E@QZB\T)eU\pC#C|7=\$J$##A[@-@{Qk]
+`endprotected
+endmodule
