@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix --help to use Pod::Usage instead of depreciated pod2text.
 
+****	Ignore quotes inside `protected/`endprotected blocks.
+
 ****	Drop end-of-file ctrl-Z's when preprocessing input.
 
 * Verilog::Language 2.373 2007/04/02
